--- a/package.json
+++ b/package.json
@@ -249,5 +249,9 @@
     "node": ">=16.14.0",
     "pnpm": "8.7.1"
   },
-  "packageManager": "pnpm@8.7.1"
+  "packageManager": "pnpm@8.7.1",
+  "dependencies": {
+    "@replayio/jest": "27.2.21",
+    "@replayio/playwright": "2.0.0-alpha.2"
+  }
 }
